--- a/src/app/pages/alumno/perfil/perfil-al.component.html
+++ b/src/app/pages/alumno/perfil/perfil-al.component.html
@@ -83,8 +83,9 @@
         <div class="form-group col-md-6">
             <label>Rama</label>
             <select formControlName="area" class="form-control" [class]="isValidField('area')">
-                <option value="informatica">Informatica</option>
-                <option value="comercio">Comercio</option>
+                <option *ngFor="let area of areas">{{year}}</option>
+                <!--<option value="informatica">Informatica</option>
+                <option value="comercio">Comercio</option>-->
             </select>
             <div class="invalid-feedback">
                 <span *ngIf="contactForm.get('area').errors?.required">
