--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -40,6 +40,18 @@
                         </div>
                     </div>
                     <div class="form-row">
+                        <div class="form-group col-md-8 mx-auto file has-name">
+                            <label class="file-label">
+                                <input class="file-input" type="file" formControlName="archivo" (change)="cambioArchivo($event)">                                                          
+                            </label>                            
+                        </div>                        
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-8 mx-auto file has-name">
+                            <progress *ngIf="porcentaje > 0 && porcentaje < 100" class="progress is-large is-success" value="{{porcentaje}}" max="100">{{porcentaje}}%</progress>                                                
+                        </div>
+                    </div>
+                    <div class="form-row">
                         <div class="form-group col-md-8 mx-auto">
                             <label>Seleccione el tipo:  </label>
 
