--- a/src/app/pages/alumno/view-profile/view-profile.component.html
+++ b/src/app/pages/alumno/view-profile/view-profile.component.html
@@ -1,6 +1,5 @@
 <div class="container" *ngIf="can == false" class=" container my-3">
-    <!--<app-load-spinner></app-load-spinner>-->
-    Cargando
+    <app-load-spinner></app-load-spinner>    
 </div>
 <div class="container my-3" *ngIf="can == true">
     <div class="row justify-content-center">
