--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -9,26 +9,29 @@
     <nav class="list-group">
         <ul>
             <li>
-                <a href="#profile-submenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle collapsed">
+                <a routerLink="../perfil" class="dropdown-toggle collapsed">
                     <svg class="bi text-info" width="20" height="20" fill="currentColor">
             <use xlink:href="bootstrap-icons.svg#person" />
           </svg> Perfil
                 </a>
+                <!--
                 <ul class="list-unstyled collapse" id="profile-submenu">
                     <li>
-                        <a *ngIf="rol_id==1" href="#">Ver perfil</a>
+
+                           <a routerLink="../perfil">Ver perfil</a> <a *ngIf="rol_id==1" href="#">Ver perfil</a>
                         <a *ngIf="rol_id==2" href="#">Ver perfil</a>
                         <a *ngIf="rol_id==3" routerLink="../perfil">Ver perfil</a>
-                        <a *ngIf="rol_id==4" href="">Ver perfil</a>
-                    </li>
-                    <li>
-                        <a href="#">Page 2</a>
-                    </li>
-                    <li>
-                        <a href="#">Page 3</a>
-                    </li>
-                </ul>
+                        <a *ngIf="rol_id==4" href="../perfil">Ver perfil</a>
             </li>
+            <li>
+                <a href="#">Page 2</a>
+            </li>
+            <li>
+                <a href="#">Page 3</a>
+            </li>
+        </ul>-->
+            </li>
+
             <li>
                 <a href="#offer-submenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                     <svg class="bi text-info" width="20" height="20" fill="currentColor">
